<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <!--item
            android:id="@+id/inboxFragment"
            android:icon="@android:drawable/ic_dialog_email"
            android:title="Inbox" /-->
        <!--item
            android:id="@+id/sentItemsFragment"
            android:icon="@android:drawable/ic_menu_send"
            android:title="Sent Items" /-->
        <item
            android:id="@+id/certificateStatusFragment"
            android:icon="@android:drawable/ic_menu_send"
            android:title="@string/certificate_status" />
    </group>

    <!--item android:title="Support">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/helpFragment"
                    android:icon="@android:drawable/ic_menu_help"
                    android:title="Help" />
            </group>
        </menu>
    </item-->

    <item android:title="Settings">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/organizationSettingsFragment"
                    android:icon="@android:drawable/ic_menu_preferences"
                    android:title="@string/organization_settings" />
                <item
                    android:id="@+id/deviceSettingsFragment"
                    android:icon="@android:drawable/ic_menu_preferences"
                    android:title="@string/device_settings" />
                <item
                    android:id="@+id/certificateSettingsFragment"
                    android:icon="@android:drawable/ic_menu_preferences"
                    android:title="@string/certificate_settings" />
            </group>
        </menu>
    </item>
</menu>
